--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -375,3 +375,86 @@
 		right: 20px;
 	}
 }
+
+.c-buttonREP {
+	border: 1px solid #81b3d4;
+	border-radius: 30px;
+	width: 290px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	background-color: #fff;
+	margin-top: 15px;
+	@include is-max(1000px){
+		margin-top:50px;
+		order: 4;
+	}
+
+	&.red{
+		background-color: #a72f37;
+		border: none;
+		color: #fff;
+		margin-top:50px;
+		@include is-max(1000px){
+			order: 4;
+		}
+	}
+
+	@include is-sp {
+		width: 100%;
+	}
+
+	.txt {
+		text-align: center;
+		font-family: cross-platform-yu-gothic;
+		font-weight: 700;
+		padding: 20px 0;
+		line-height: 1;
+
+		@include font-line(14);
+	}
+
+	img {
+		width: 5px;
+		height: 10px;
+		position: absolute;
+		right: 20px;
+	}
+}
+
+.c-buttonOG {
+	border: 1px solid #81b3d4;
+	border-radius: 30px;
+	width: 290px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	background-color: #fff;
+	margin-top: 15px;
+
+	@include is-sp {
+		width: 100%;
+	}
+
+	.txt {
+		text-align: center;
+		font-family: cross-platform-yu-gothic;
+		font-weight: 700;
+		padding: 20px 0;
+		line-height: 1;
+
+		@include font-line(14);
+	}
+
+	img {
+		width: 5px;
+		height: 10px;
+		position: absolute;
+		right: 20px;
+	}
+}
+
+
