--- a/src/assets/scss/sections/_top.scss
+++ b/src/assets/scss/sections/_top.scss
@@ -1,5 +1,5 @@
-.top{
-    .sect_1{
-        background-color: red;
-    }
-}
+// .top{
+//     .sect_1{
+//         background-color: red;
+//     }
+// }
