--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -372,3 +372,67 @@
 	}
 }
 
+
+.c-cards09 {
+    width: 220px;
+
+    &-img {
+        position: relative;
+
+        &-num {
+            position: absolute;
+            top: 2%;
+            left: 2%;
+
+            p {
+                font-size: 40px;
+                line-height: 48px;
+                font-weight: 400;
+                color: #fff;
+            }
+        }
+
+        &-view {
+            position: absolute;
+            bottom: 6%;
+            right: 5%;
+            font-family: century-gothic, sans-serif;
+            background: #258ACF;
+            width: 62px;
+            height: 62px;
+            clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+            z-index: 1;
+
+            p {
+                font-size: 10px;
+                line-height: 10px;
+                transform: rotate(310deg);
+                color: #fff;
+                padding-top: 31px;
+                padding-left: 10px;
+            
+            }
+        }
+    }
+
+    &-desc {
+        text-align: center;
+        background-color: #fff;
+
+      &-ttl {
+        font-size: 14px;
+        line-height: 21px;
+        font-weight: 700;
+        font-family: cross-platform-yu-gothic;
+        padding-top: 20px;
+      }
+
+      &-txt {
+        font-size: 11px;
+        line-height: 16px;
+        font-weight: 500;
+        font-family: cross-platform-yu-gothic;
+        color: #333;
+      }
+    }
+}
