--- a/src/assets/scss/object/component/_clipPath.scss
+++ b/src/assets/scss/object/component/_clipPath.scss
@@ -29,10 +29,11 @@
 
 .clip {
     -webkit-clip-path: polygon(0 87%, 100% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(0 103%, 100% 0%, 100% 100%, 0% 100%);
-    background-color: #2579BF;
+    clip-path: polygon(0 95%, 100% 0%, 100% 100%, 0% 100%);
+    background: linear-gradient(to right, #2579BF,#2593D5);
     height: 93px;
-    width: 1200px;
+    width: 100%;
     position: absolute;
     bottom: 0;
+    right: 0;
 }
