--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -400,18 +400,19 @@
 			top: 10px;
 			left: 10px;
 			background: linear-gradient(90deg, #2579bf 0%, #2593d5 50%);
-            height: 62px;
-            width: 62px;
-            clip-path: polygon(0 0, 0% 100%, 100% 0);
+			height: 62px;
+			width: 62px;
+			clip-path: polygon(0 0, 0% 100%, 100% 0);
+			font-family: 'Bebas Neue', cursive;
 
-            p {
-                @include font-line(32.69);
-                font-weight: 400;
-                letter-spacing: 0;
-                color: #fff;
-                position: absolute;
-                transform: translate(6%, -14%);
-            }
+			p {
+				@include font-line(32.69);
+				font-weight: 400;
+				letter-spacing: 0;
+				color: #fff;
+				position: absolute;
+				transform: translate(24%, -14%);
+			}
 		}
 
 		.view_more {
@@ -441,7 +442,11 @@
 		font-family: cross-platform-yu-gothic;
 		font-weight: 700;
 		color: #258acf;
-		padding: 20px 0 30px 0;
+		padding: 20px 15px 30px 15px;
+
+		// @include is-sp {
+		// 	font-size: 15px;
+		// }
 	}
 	&__bottom {
 		@include font-line(11);
@@ -450,6 +455,10 @@
 		font-family: cross-platform-yu-gothic;
 		font-weight: 500;
 		color: #808080;
-		padding-bottom: 20px;
+		padding: 0 15px 20px 15px;
+
+		// @include is-sp {
+		// 	font-size: 13.4px;
+		// }
 	}
 }
