change:update top-page

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -418,13 +418,14 @@
     &-desc {
         text-align: center;
         background-color: #fff;
+        padding:20px 0 18px 0;
+        
 
       &-ttl {
         font-size: 14px;
         line-height: 21px;
         font-weight: 700;
         font-family: cross-platform-yu-gothic;
-        padding-top: 20px;
       }
 
       &-txt {
