Changed: made changes on office gallery page

--- a/src/assets/scss/pages/_office-gallery.scss
+++ b/src/assets/scss/pages/_office-gallery.scss
@@ -1,96 +1,4 @@
 .office_gal {
-	&--items {
-		position: relative;
-		padding: 100px 0 54px 0;
-
-		&:nth-of-type(even) {
-			padding: 150px 0;
-			background-color: #fff;
-			-webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
-			clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
-
-			@include is-sp {
-				padding: 200px 0 100px 0;
-				-webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
-				clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
-			}
-
-			.office_gal--contents {
-				flex-direction: row-reverse;
-				&__col1 {
-					padding-right: unset;
-					padding-left: 98px;
-					.ttl {
-						color: #258acf;
-					}
-					.desc {
-						color: #000;
-					}
-				}
-			}
-		}
-	}
-
-	&--contents {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-		&:nth-of-type(2) {
-			flex-direction: column-reverse;
-		}
-
-		&__col1 {
-			width: calc(100% - 46.94%);
-			padding-right: 95px;
-			&--text {
-				text-align: left;
-				&.ttl {
-					font-family: yu-mincho-pr6n, sans-serif;
-					@include font-line(22, 48);
-					font-weight: 500;
-					letter-spacing: 0.22em;
-					color: #fff;
-				}
-				&.ttl_sub {
-					font-family: century-gothic, sans-serif;
-					@include font-line(10, 14);
-					font-weight: 700;
-					letter-spacing: 0.28em;
-					color: #92c4e5;
-					padding: 20px 0 30px 0;
-				}
-				.desc {
-					font-family: cross-platform-yu-gothic;
-					@include font-line(13, 26);
-					font-weight: 500;
-					letter-spacing: 0.16em;
-					color: $color-text03;
-					text-align: justify;
-				}
-			}
-		}
-
-		&__col2 {
-			width: 46.94%;
-			position:relative;
-
-			img {
-				width: 100%;
-			}
-
-			.before{
-				position:absolute !important;
-				top:0;
-				left: unset !important;
-				right: 85px;
-			}
-
-			.after{
-				display:none;
-			}
-		}
-	}
-
 	.section_1 {
 		position: relative;
 		margin: 90px 0;
@@ -114,23 +22,6 @@
 			);
 			-webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
 			clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			left: 0;
-			bottom: -88px;
-			height: 90px;
-			z-index: 1;
-			background: linear-gradient(
-				90deg,
-				rgba(37, 121, 191, 1) 0%,
-				rgba(37, 147, 213, 1) 50%
-			);
-			-webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
-			clip-path: polygon(0 0, 0% 100%, 100% 0);
 		}
 
 		.l-wrap {
@@ -160,47 +51,163 @@
 		}
 	}
 
-	.section_2 {
-		padding-top: 55px;
 
-		.photos {
-			display: flex;
-			flex-wrap: wrap;
-			padding-top: 70px;
-			padding-bottom: 55px;
+
+	&--items {
+		position: relative;
+		padding: 100px 0 54px 0;
+
+		&:nth-of-type(even) {
+			padding: 150px 0;
+			background-color: #fff;
+			-webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
+			clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
 
 			@include is-sp {
-				padding: 50px 30px;
+				padding: 200px 0 100px 0;
+				-webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
+				clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
+			}
+
+			.office_gal--contents {
+				flex-direction: row-reverse;
+				&__col1 {
+					padding-right: 0;
+					padding-left: 98px;
+					@include is-max(750px) {
+						width: 100%;
+						padding-left: 0;
+					}
+
+					.ttl {
+						color: #258acf;
+						@include font-line(22, 37);
+					}
+					.desc {
+						color: #000;
+					}
+				}
+			}
+		}
+
+		&:last-of-type {
+			-webkit-clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 105%);
+			clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 105%);
+			@include is-sp {
+				-webkit-clip-path: polygon(0 7%, 100% 0%, 100% 100%, 0% 105%);
+				clip-path: polygon(0 7%, 100% 0%, 100% 100%, 0% 105%);
+			}
+		}
+
+		.hide-pc {
+			display: none;
+			@include is-max(750px) {
+				display: flex;
+				margin-top: 50px;
+			}
+		}
+		.hide-tabsp {
+			display: flex;
+			@include is-max(750px) {
+				display: none;
+			}
+		}
+
+		.hide-solo {
+			display: none;
+			@include is-max(750px) {
+				display: block;
+			}
+		}
+	}
+
+	&--contents {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		&:nth-of-type(2) {
+			flex-direction: column-reverse;
+		}
+
+		&__col1 {
+			width: calc(100% - 46.94%);
+			padding-right: 95px;
+			@include is-max(750px) {
+				width: 100%;
+				padding-right: 0;
+			}
+			&--text {
+				text-align: left;
+				&.ttl {
+					font-family: yu-mincho-pr6n, sans-serif;
+					@include font-line(22, 48);
+					font-weight: 500;
+					letter-spacing: 0.22em;
+					color: #fff;
+					padding-top: 40px;
+				}
+				&.ttl_sub {
+					font-family: century-gothic, sans-serif;
+					@include font-line(10, 14);
+					font-weight: 700;
+					letter-spacing: 0.28em;
+					color: #92c4e5;
+					padding: 20px 0 30px 0;
+				}
+				.desc {
+					font-family: cross-platform-yu-gothic;
+					@include font-line(13, 26);
+					font-weight: 500;
+					letter-spacing: 0.16em;
+					color: $color-text03;
+					text-align: justify;
+					@include is-max(750px) {
+						padding-bottom: 24px;
+					}
+				}
+			}
+		}
+
+		&__col2 {
+			width: 46.94%;
+			position: relative;
+			@include is-max(750px) {
+				width: 100%;
 			}
 
 			img {
-				width: calc(100% / 5);
-
-				@include is-sp {
-					width: calc(100% / 2);
-				}
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
 			}
-		}
-	}
 
-	.section_3 {
-		padding-top: 100px;
-
-		.l-wrap {
-			position: relative;
-
-			.bg_1 {
-				position: absolute;
+			.top {
+				position: absolute !important;
 				top: 0;
-				right: 0;
-				width: 370px;
+				left: unset !important;
+				right: 85px;
 
-				@include is-sp {
-					width: 122px;
-					right: 20px;
-					top: -30px;
+				&.hide-solo {
+					top: 10px !important;
+					right: 10px;
+				}
+
+				@include is-max(750px) {
+					right: 11.76%;
+				}
+			}
+
+			.bottom {
+				position: absolute !important;
+				bottom: 0;
+				left: 67px !important;
+				top: unset;
+
+				@include is-max(750px) {
+					left: 11.76% !important;
 				}
 			}
 		}
 	}
+
 }
