--- a/src/assets/scss/object/component/_img-box.scss
+++ b/src/assets/scss/object/component/_img-box.scss
@@ -17,10 +17,11 @@
 	}
 
 	&__ttl {
-		color: #90c2e3;
+		color: #fff;
 		font-family: century-gothic, sans-serif;
 		font-weight: 700;
 		padding-top: 20px;
+		padding-bottom: 12px;
 
 		@include font-line(11);
 	}
