--- a/src/assets/scss/pages/_casestudy08.scss
+++ b/src/assets/scss/pages/_casestudy08.scss
@@ -1,6 +1,5 @@
-.case07 {
+.case08 {
 	&--s1 {
-
 		&_title {
 			letter-spacing: 0.18em !important;
 		}
@@ -31,6 +30,19 @@
 
 	&--s2 {
 		padding-top: 0 !important;
+
+		.l-wrap {
+			position: relative;
+		}
+
+		.c-case02__txt {
+			position: relative;
+			z-index: 999;
+		}
+	}
+
+	&--s3 {
+		padding-bottom: 100px;
 	}
 
 	// globals
@@ -39,17 +51,61 @@
 		position: absolute !important;
 		left: 0 !important;
 		width: 290px !important;
-		bottom: -65px !important;
-		z-index: -1 !important;
+		top: -37px !important;
+		z-index: 0 !important;
 	}
 
 	&--s1_c4 {
-		-webkit-clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
-		clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
+		&::after {
+			content: "";
+			width: 100%;
+			height: 4px;
+			background: #fff;
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: -1px;
+			z-index: -10;
+		}
 	}
 
-	// // padding
-	// &--pt-sp {
-	// 	padding-top: 0 !important;
-	// }
+	.bg_1 {
+		@include is-sp {
+			display: none;
+		}
+	}
+
+	.bg_3 {
+		top: -18px;
+		right: -4px;
+		width: 373px;
+		z-index: -1;
+	}
+
+	.bg_5,
+	.bg_6 {
+		opacity: 0.4;
+	}
+
+	.bg_7 {
+		position: absolute;
+		bottom: 112px;
+		top: unset;
+		right: 10px;
+		z-index: -1;
+
+		@include is-sp {
+			display: none;
+		}
+	}
+
+	.bg_8 {
+		position: absolute;
+		top: 200px;
+		left: -15px;
+
+		@include is-sp {
+			display: none;
+		}
+	}
 }
