--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -94,7 +94,7 @@
 		&--row {
 			display: flex;
 			justify-content: space-between;
-			align-items: center;
+			align-items: stretch;
 
 			// .col {
 			// 	// height: 200px;
