continue working on page_access (2)

--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -243,4 +243,13 @@
 			margin: 25px 0 0 0;
 		}
 	}
+
+    .acc_ttl {
+        letter-spacing: 0.28em;
+    }
+
+    .acc_sub {
+        line-height: 1;
+        padding-bottom: 0;
+    }
 }
